sass/components/_nmu-header.scss
/* ... */
//* end of top navigation


//* branding
.region-branding {
	background: $nmu-green-darker;
	text-align:center;
	letter-spacing:.06em;
	padding:22px 0 16px 0;

	.branding-one {
		font-family:$avenir-black;
		color:white;
		font-size:2.1em;
		line-height:1em;
	}
	.branding-two {
		font-family:$avenir-medium;
		color:$nmu-gold;
		font-size:1.2em;
	}
	.alert-nmu {
		width: 80%;
		margin: 15px auto;
	}
}

//* main navigation
.region-main-navigation {
	position: relative;

	.header-spanning-image {
		background-repeat:repeat-x;
		background-position:center;
		height:100px;
		top: 0;
		width: 100%;
		position: absolute;
		&.image1 {
			background-image:url(/sites/all/themes/zen_nmu/images/internal-spanning/winter/winter-1.jpg);
		}
		&.image2 {
			background-image:url(/sites/all/themes/zen_nmu/images/internal-spanning/winter/winter-2.jpg);
		}
		&.image3 {
			background-image:url(/sites/all/themes/zen_nmu/images/internal-spanning/winter/winter-3.jpg);
		}
		&.image4 {
			background-image:url(/sites/all/themes/zen_nmu/images/internal-spanning/winter/winter-4.jpg);
		}
		&.image5 {
			background-image:url(/sites/all/themes/zen_nmu/images/internal-spanning/winter/winter-5.jpg);
		}
		&.image6 {
			background-image:url(/sites/all/themes/zen_nmu/images/internal-spanning/winter/winter-6.jpg);
		}
	}

	#header-main-navigation {
		@media all and #{$mq-bootstrap-xs-max} {
			visibility:hidden;  //hide the navbar on xs screens but keep the flow of the page
			@include transition-duration(0s);
		}
	}

	padding:0;  //make the nav bar fill up the space available
	//height of 100 is needed to make space for the header-spaning image.  this value is reset for front pages to 50px
	height:100px; //give this region a height so when the nav is removed, the page just not jump up to fill up the empty space

	img[align="right"],
	img[style*="float: right"],
	img[style*="float:right"]{
		padding-left:5px;
	}
	img[align="left"],
	img[style*="float: left"],
	img[style*="float:left"]{
		padding-right:5px;
	}
	//This is used when the youtube video begins playing on the homepage to make the nav more transparent
	.nav-transparent {
		@include opacity(0.2);
	}
	//* customize the bootstrap nav defaults
	nav {
		width:100%;  //this is used to keep the nav full width when affixed.  must be in this selector so css animations don't animate it growing on an ipad scroll
		background:$nmu-black;
		border:none;
		@include border-radius(0);
		@include box-shadow(none);
		@include opacity(0.8);
		@include transition-duration(.5s);
		z-index:102; //the overlay is 500, so we want to make sure this stays below it
		margin-top:-1px;  //fix the phantom line that shows up on the ipad
		&:hover,
		&:focus,
		&.nav-active{
			@include opaque;
		}
	}

	.navbar-brand {
		display:none;
		text-shadow:none;
		color:$nmu-gold !important;
		font-family:$avenir-black;
	}

	nav.affix {  //navbar is affixed to the top of the screen
		top:$top-navigation-height;
		//z-index:1;  //why is this a 1 here?
		.navbar-brand {
			display:block;
			position:absolute;
			top:0;
			left:20px;
		}
	}

	/* this css will make the dropdown menus show on hover
	 * it still needs a lot of work before it will be fully functional
	 * work includes some smoother animations and an active class being applied to hovered element
	.dropdown:hover .dropdown-menu {
			display: block;
	 }
	*/

	//* adjust the margin on the nav elements based on screen size
	@media all and #{$mq-bootstrap-sm-min} {
		.nav>li>a {
			padding-left:30px; //* add padding for the hover background color
			padding-right:30px;
		}
		li.dropdown {
			margin: 0 1px;  //* add just a small margin between the nav items
		}
	}
	@media all and #{$mq-bootstrap-md-min} {
		.nav>li>a {
			padding-left:50px; //* more padding for bigger screens
			padding-right:50px;
		}
	}

	.navbar-default .navbar-nav>li>a {
		color:$nmu-gray-light;
		@include transition-duration(.5s);  //* add the transition to the a tag so it fires on mouseover and mouseout
		text-shadow:none;
		&:hover,
		&:focus{
			background:white;
			color:$nmu-green;
			text-shadow:none;
		}
	}

	//* make sure the nav item stays green even when the focus/hover is removed from the navbar item
	.navbar-default .navbar-nav>.open>a {
		color:$nmu-green;
		background:white;
	}

	//* center align the navbar text on all non collapsed layouts
	@media all and #{$mq-bootstrap-sm-min} {
		.navbar-center.navbar .nav,
		.navbar-center.navbar .nav > li {
				float:none;
				display:inline-block;
				vertical-align: top;
		}
		.navbar-center .navbar-collapse {
				text-align:center;
		}
		.navbar-center .dropdown-menu {
				text-align: left;
		}
	}

	//* wrap the navbar dropdowns in a max width div
	.dropdown-menu-width-wrapper {
		max-width:1200px;
		margin:0 auto;
	}

	//* no need for bootstrap's border around the full width dropdown menus
	.dropdown-menu {
		border:none;

		//if we want the menus to have a width instead of the full screen width use the following
		//max-width:1200px;
		//margin: 0 auto;
	}

	//*** collapsed view tweaks

	//* make the toggle nav button (in collapsed view) have a background otherwise bootstrap makes it transparent
	.navbar-toggle {
		background:white;
	}

	//* make the dropdown menus have a white background when collapsed otherwise bootstrap makes it transparent
	@media all and #{$mq-bootstrap-xs-max} {
		.navbar-nav .open .dropdown-menu {
			background:$nmu-off-white;
		}
	}

}

//* This tweak only applied to users logged into drupal.  it makes the main nav stick in the right spot when the drupal toolbar is present
body.logged-in {
	.region-main-navigation nav.affix {
	top:#{$top-navigation-height +30};  //switched to 29.2 to remove the phantom line that shows up on tablets above the nav bar
}

	#header-main-navigation {
		margin-bottom:-50px;
	}

	.is-active .active {
		background-color: #dedede;
	}

}

